--- a/course-recommender-system-app/Course Recommendation System.ipynb
+++ b/course-recommender-system-app/Course Recommendation System.ipynb
@@ -43,7 +43,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def readData(file: str, extension='.csv'):\n",
+    "    \"\"\"_summary_\n",
+    "\n",
+    "    Args:\n",
+    "        file (str): Required file to read\n",
+    "        extension (str, optional): Extension of the required file. Defaults to '.csv'.\n",
+    "\n",
+    "    Returns:\n",
+    "        A Pandas dataframe\n",
+    "    \"\"\"\n",
+    "    if extension=='.csv':\n",
+    "        read_func = pd.read_csv\n",
+    "\n",
+    "    return read_func(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -79,6 +101,12 @@
        "      <th>content_duration</th>\n",
        "      <th>published_timestamp</th>\n",
        "      <th>subject</th>\n",
+       "      <th>profit</th>\n",
+       "      <th>published_date</th>\n",
+       "      <th>published_time</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -96,6 +124,12 @@
        "      <td>1.5 hours</td>\n",
        "      <td>2017-01-18T20:58:58Z</td>\n",
        "      <td>Business Finance</td>\n",
+       "      <td>429400</td>\n",
+       "      <td>2017-01-18</td>\n",
+       "      <td>20:58:58Z</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -111,51 +145,12 @@
        "      <td>39 hours</td>\n",
        "      <td>2017-03-09T16:34:20Z</td>\n",
        "      <td>Business Finance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1006314</td>\n",
-       "      <td>Financial Modeling for Business Analysts and C...</td>\n",
-       "      <td>https://www.udemy.com/financial-modeling-for-b...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>45</td>\n",
-       "      <td>2174</td>\n",
-       "      <td>74</td>\n",
-       "      <td>51</td>\n",
-       "      <td>Intermediate Level</td>\n",
-       "      <td>2.5 hours</td>\n",
-       "      <td>2016-12-19T19:26:30Z</td>\n",
-       "      <td>Business Finance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1210588</td>\n",
-       "      <td>Beginner to Pro - Financial Analysis in Excel ...</td>\n",
-       "      <td>https://www.udemy.com/complete-excel-finance-c...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>95</td>\n",
-       "      <td>2451</td>\n",
-       "      <td>11</td>\n",
-       "      <td>36</td>\n",
-       "      <td>All Levels</td>\n",
-       "      <td>3 hours</td>\n",
-       "      <td>2017-05-30T20:07:24Z</td>\n",
-       "      <td>Business Finance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1011058</td>\n",
-       "      <td>How To Maximize Your Profits Trading Options</td>\n",
-       "      <td>https://www.udemy.com/how-to-maximize-your-pro...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>200</td>\n",
-       "      <td>1276</td>\n",
-       "      <td>45</td>\n",
-       "      <td>26</td>\n",
-       "      <td>Intermediate Level</td>\n",
-       "      <td>2 hours</td>\n",
-       "      <td>2016-12-13T14:57:18Z</td>\n",
-       "      <td>Business Finance</td>\n",
+       "      <td>209400</td>\n",
+       "      <td>2017-03-09</td>\n",
+       "      <td>16:34:20Z</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -165,40 +160,32 @@
        "   course_id                                       course_title  \\\n",
        "0    1070968                 Ultimate Investment Banking Course   \n",
        "1    1113822  Complete GST Course & Certification - Grow You...   \n",
-       "2    1006314  Financial Modeling for Business Analysts and C...   \n",
-       "3    1210588  Beginner to Pro - Financial Analysis in Excel ...   \n",
-       "4    1011058       How To Maximize Your Profits Trading Options   \n",
        "\n",
-       "                                                 url is_paid price  \\\n",
-       "0  https://www.udemy.com/ultimate-investment-bank...    True   200   \n",
-       "1      https://www.udemy.com/goods-and-services-tax/    True    75   \n",
-       "2  https://www.udemy.com/financial-modeling-for-b...    True    45   \n",
-       "3  https://www.udemy.com/complete-excel-finance-c...    True    95   \n",
-       "4  https://www.udemy.com/how-to-maximize-your-pro...    True   200   \n",
+       "                                                 url  is_paid  price  \\\n",
+       "0  https://www.udemy.com/ultimate-investment-bank...     True    200   \n",
+       "1      https://www.udemy.com/goods-and-services-tax/     True     75   \n",
        "\n",
-       "   num_subscribers  num_reviews  num_lectures               level  \\\n",
-       "0             2147           23            51          All Levels   \n",
-       "1             2792          923           274          All Levels   \n",
-       "2             2174           74            51  Intermediate Level   \n",
-       "3             2451           11            36          All Levels   \n",
-       "4             1276           45            26  Intermediate Level   \n",
+       "   num_subscribers  num_reviews  num_lectures       level content_duration  \\\n",
+       "0             2147           23            51  All Levels        1.5 hours   \n",
+       "1             2792          923           274  All Levels         39 hours   \n",
        "\n",
-       "  content_duration   published_timestamp           subject  \n",
-       "0        1.5 hours  2017-01-18T20:58:58Z  Business Finance  \n",
-       "1         39 hours  2017-03-09T16:34:20Z  Business Finance  \n",
-       "2        2.5 hours  2016-12-19T19:26:30Z  Business Finance  \n",
-       "3          3 hours  2017-05-30T20:07:24Z  Business Finance  \n",
-       "4          2 hours  2016-12-13T14:57:18Z  Business Finance  "
+       "    published_timestamp           subject  profit published_date  \\\n",
+       "0  2017-01-18T20:58:58Z  Business Finance  429400     2017-01-18   \n",
+       "1  2017-03-09T16:34:20Z  Business Finance  209400     2017-03-09   \n",
+       "\n",
+       "  published_time  year  month  day  \n",
+       "0      20:58:58Z  2017      1   18  \n",
+       "1      16:34:20Z  2017      3    9  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('udemy_courses.csv')\n",
-    "df.head()"
+    "df = readData('udemy_course_data.csv')\n",
+    "df.head(2)"
    ]
   },
   {
@@ -345,26 +332,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    Complete GST Course & Certification - Grow You...\n",
-       "2    Financial Modeling for Business Analysts and C...\n",
-       "3    Beginner to Pro - Financial Analysis in Excel ...\n",
-       "4         How To Maximize Your Profits Trading Options\n",
-       "Name: course_title, dtype: object"
+       "0                      Ultimate Investment Banking Course\n",
+       "1       Complete GST Course & Certification - Grow You...\n",
+       "2       Financial Modeling for Business Analysts and C...\n",
+       "3       Beginner to Pro - Financial Analysis in Excel ...\n",
+       "4            How To Maximize Your Profits Trading Options\n",
+       "                              ...                        \n",
+       "3678    Learn jQuery from Scratch - Master of JavaScri...\n",
+       "3679    How To Design A WordPress Website With No Codi...\n",
+       "3680                        Learn and Build using Polymer\n",
+       "3681    CSS Animations: Create Amazing Effects on Your...\n",
+       "3682    Using MODX CMS to Build Websites: A Beginner's...\n",
+       "Name: course_title, Length: 3683, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['course_title'].iloc[1:5]"
+    "df['course_title']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                      Ultimate Investment Banking Course\n",
+       "1       Complete GST Course & Certification - Grow Pra...\n",
+       "2        Financial Modeling Business Analysts Consultants\n",
+       "3            Beginner Pro - Financial Analysis Excel 2017\n",
+       "4                        Maximize Profits Trading Options\n",
+       "                              ...                        \n",
+       "3678     Learn jQuery Scratch - Master JavaScript library\n",
+       "3679                      Design WordPress Website Coding\n",
+       "3680                                  Learn Build Polymer\n",
+       "3681       CSS Animations: Create Amazing Effects Website\n",
+       "3682            MODX CMS Build Websites: Beginner's Guide\n",
+       "Name: course_title, Length: 3683, dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['course_title'].apply(nfx.remove_stopwords)"
    ]
   },
   {
@@ -389,6 +414,10 @@
    ],
    "source": [
     "# generating clean text by removing the stopwords and special characters\n",
+    "\n",
+    "def title_manipulation(dataframe, column:str):\n",
+    "    dataframe\n",
+    "\n",
     "\n",
     "\n",
     "df['Clean_title'] = df['course_title'].apply(nfx.remove_stopwords)\n",
@@ -5653,8 +5682,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "9ceabc553014f297f10d74711933670e15735f9285c51ea7c393983f6f558b69"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -5668,7 +5700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
