Fixing string treatment and lowercases

--- a/course-recommender-system-app/Course Recommendation System.ipynb
+++ b/course-recommender-system-app/Course Recommendation System.ipynb
@@ -1545,10 +1545,11 @@
     "    Returns:\n",
     "        Dataframe: Column modified dataframe\n",
     "    \"\"\"\n",
-    "    dataframe[new_column] = dataframe[column].apply(nfx.remove_stopwords)\n",
-    "    dataframe[new_column] = dataframe[column].apply(nfx.remove_special_characters)\n",
-    "    dataframe[new_column] = dataframe[column].apply(nfx.remove_puncts)\n",
-    "    dataframe[new_column] = dataframe[column].apply(nfx.remove_emojis)\n",
+    "    dataframe[new_column] = dataframe[column].apply(nfx.remove_stopwords)\\\n",
+    "    .apply(nfx.remove_special_characters)\\\n",
+    "    .apply(nfx.remove_puncts)\\\n",
+    "    .apply(nfx.remove_emojis)\\\n",
+    "    .apply(str.lower)\n",
     "\n",
     "    return dataframe\n",
     "\n",
@@ -1594,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1603,7 +1604,8 @@
     "\n",
     "cv_mat = cosineSimMat(df, 'Clean_title')\n",
     "\n",
-    "recommendCourse(df, '')"
+    "cv_mat\n",
+    "# recommendCourse(df, '')"
    ]
   },
   {
