Shortening solution inside model.py

--- a/course-recommender-system-app/Course Recommendation System.ipynb
+++ b/course-recommender-system-app/Course Recommendation System.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "1      16:34:20Z  2017      3    9  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,306 +190,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['BTC_ADDRESS_REGEX',\n",
-       " 'CURRENCY_REGEX',\n",
-       " 'CURRENCY_SYMB_REGEX',\n",
-       " 'Counter',\n",
-       " 'DATE_REGEX',\n",
-       " 'EMAIL_REGEX',\n",
-       " 'EMOJI_REGEX',\n",
-       " 'HASTAG_REGEX',\n",
-       " 'MASTERCard_REGEX',\n",
-       " 'MD5_SHA_REGEX',\n",
-       " 'MOST_COMMON_PUNCT_REGEX',\n",
-       " 'NUMBERS_REGEX',\n",
-       " 'PHONE_REGEX',\n",
-       " 'PoBOX_REGEX',\n",
-       " 'SPECIAL_CHARACTERS_REGEX',\n",
-       " 'STOPWORDS',\n",
-       " 'STOPWORDS_de',\n",
-       " 'STOPWORDS_en',\n",
-       " 'STOPWORDS_es',\n",
-       " 'STOPWORDS_fr',\n",
-       " 'STOPWORDS_ru',\n",
-       " 'STOPWORDS_yo',\n",
-       " 'STREET_ADDRESS_REGEX',\n",
-       " 'TextFrame',\n",
-       " 'URL_PATTERN',\n",
-       " 'USER_HANDLES_REGEX',\n",
-       " 'VISACard_REGEX',\n",
-       " '__builtins__',\n",
-       " '__cached__',\n",
-       " '__doc__',\n",
-       " '__file__',\n",
-       " '__generate_text',\n",
-       " '__loader__',\n",
-       " '__name__',\n",
-       " '__numbers_dict',\n",
-       " '__package__',\n",
-       " '__spec__',\n",
-       " '_lex_richness_herdan',\n",
-       " '_lex_richness_maas_ttr',\n",
-       " 'clean_text',\n",
-       " 'defaultdict',\n",
-       " 'digit2words',\n",
-       " 'extract_btc_address',\n",
-       " 'extract_currencies',\n",
-       " 'extract_currency_symbols',\n",
-       " 'extract_dates',\n",
-       " 'extract_emails',\n",
-       " 'extract_emojis',\n",
-       " 'extract_hashtags',\n",
-       " 'extract_html_tags',\n",
-       " 'extract_mastercard_addr',\n",
-       " 'extract_md5sha',\n",
-       " 'extract_numbers',\n",
-       " 'extract_pattern',\n",
-       " 'extract_phone_numbers',\n",
-       " 'extract_postoffice_box',\n",
-       " 'extract_shortwords',\n",
-       " 'extract_special_characters',\n",
-       " 'extract_stopwords',\n",
-       " 'extract_street_address',\n",
-       " 'extract_terms_in_bracket',\n",
-       " 'extract_urls',\n",
-       " 'extract_userhandles',\n",
-       " 'extract_visacard_addr',\n",
-       " 'fix_contractions',\n",
-       " 'generate_sentence',\n",
-       " 'hamming_distance',\n",
-       " 'inverse_df',\n",
-       " 'lexical_richness',\n",
-       " 'markov_chain',\n",
-       " 'math',\n",
-       " 'nlargest',\n",
-       " 'normalize',\n",
-       " 'num2words',\n",
-       " 'random',\n",
-       " 're',\n",
-       " 'read_txt',\n",
-       " 'remove_accents',\n",
-       " 'remove_bad_quotes',\n",
-       " 'remove_btc_address',\n",
-       " 'remove_currencies',\n",
-       " 'remove_currency_symbols',\n",
-       " 'remove_custom_pattern',\n",
-       " 'remove_custom_words',\n",
-       " 'remove_dates',\n",
-       " 'remove_emails',\n",
-       " 'remove_emojis',\n",
-       " 'remove_hashtags',\n",
-       " 'remove_html_tags',\n",
-       " 'remove_mastercard_addr',\n",
-       " 'remove_md5sha',\n",
-       " 'remove_multiple_spaces',\n",
-       " 'remove_non_ascii',\n",
-       " 'remove_numbers',\n",
-       " 'remove_phone_numbers',\n",
-       " 'remove_postoffice_box',\n",
-       " 'remove_puncts',\n",
-       " 'remove_punctuations',\n",
-       " 'remove_shortwords',\n",
-       " 'remove_special_characters',\n",
-       " 'remove_stopwords',\n",
-       " 'remove_street_address',\n",
-       " 'remove_terms_in_bracket',\n",
-       " 'remove_urls',\n",
-       " 'remove_userhandles',\n",
-       " 'remove_visacard_addr',\n",
-       " 'replace_bad_quotes',\n",
-       " 'replace_currencies',\n",
-       " 'replace_currency_symbols',\n",
-       " 'replace_dates',\n",
-       " 'replace_emails',\n",
-       " 'replace_emojis',\n",
-       " 'replace_numbers',\n",
-       " 'replace_phone_numbers',\n",
-       " 'replace_special_characters',\n",
-       " 'replace_term',\n",
-       " 'replace_urls',\n",
-       " 'string',\n",
-       " 'term_freq',\n",
-       " 'to_txt',\n",
-       " 'unicodedata',\n",
-       " 'word_freq',\n",
-       " 'word_length_freq']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# list all the methods present in the neattext function\n",
-    "\n",
-    "dir(nfx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0                      Ultimate Investment Banking Course\n",
-       "1       Complete GST Course & Certification - Grow You...\n",
-       "2       Financial Modeling for Business Analysts and C...\n",
-       "3       Beginner to Pro - Financial Analysis in Excel ...\n",
-       "4            How To Maximize Your Profits Trading Options\n",
-       "                              ...                        \n",
-       "3678    Learn jQuery from Scratch - Master of JavaScri...\n",
-       "3679    How To Design A WordPress Website With No Codi...\n",
-       "3680                        Learn and Build using Polymer\n",
-       "3681    CSS Animations: Create Amazing Effects on Your...\n",
-       "3682    Using MODX CMS to Build Websites: A Beginner's...\n",
-       "Name: course_title, Length: 3683, dtype: object"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['course_title']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0                      Ultimate Investment Banking Course\n",
-       "1       Complete GST Course & Certification - Grow Pra...\n",
-       "2        Financial Modeling Business Analysts Consultants\n",
-       "3            Beginner Pro - Financial Analysis Excel 2017\n",
-       "4                        Maximize Profits Trading Options\n",
-       "                              ...                        \n",
-       "3678     Learn jQuery Scratch - Master JavaScript library\n",
-       "3679                      Design WordPress Website Coding\n",
-       "3680                                  Learn Build Polymer\n",
-       "3681       CSS Animations: Create Amazing Effects Website\n",
-       "3682            MODX CMS Build Websites: Beginner's Guide\n",
-       "Name: course_title, Length: 3683, dtype: object"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['course_title'].apply(nfx.remove_stopwords)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def readData(file: str, extension='.csv'):\n",
+    "import pandas as pd\n",
+    "def extractFeatures(rec_dataframe):\n",
     "    \"\"\"_summary_\n",
     "\n",
     "    Args:\n",
-    "        file (str): Required file to read\n",
-    "        extension (str, optional): Extension of the required file. Defaults to '.csv'.\n",
+    "        rec_dataframe (Pandas dataframe): A Pandas dataframe\n",
     "\n",
     "    Returns:\n",
-    "        A Pandas dataframe\n",
+    "        url, title and prie: Returns informations\n",
     "    \"\"\"\n",
-    "    if extension=='.csv':\n",
-    "        read_func = pd.read_csv\n",
     "\n",
-    "    return read_func(file)\n",
+    "    course_url = list(rec_dataframe['url'])\n",
+    "    course_title = list(rec_dataframe['course_title'])\n",
+    "    course_price = list(rec_dataframe['price'])\n",
     "\n",
-    "def titleManipulation(dataframe, column:str, new_column:str):\n",
-    "    \"\"\"_summary_\n",
+    "    return course_url, course_title, course_price\n",
     "\n",
-    "    Args:\n",
-    "        dataframe (Pandas): Pandas dataframe\n",
-    "        column (str): Column to be modified\n",
     "\n",
-    "    Returns:\n",
-    "        Dataframe: Column modified dataframe\n",
-    "    \"\"\"\n",
-    "    dataframe[new_column] = dataframe[column].apply(nfx.remove_stopwords)\\\n",
-    "    .apply(nfx.remove_special_characters)\\\n",
-    "    .apply(nfx.remove_puncts)\\\n",
-    "    .apply(nfx.remove_emojis)\\\n",
-    "    .apply(str.lower)\n",
+    "class recommendCourse():\n",
     "\n",
-    "    return dataframe\n",
-    "\n",
-    "def cosineSimMat(dataframe, column:str):\n",
-    "    \"\"\"_summary_\n",
-    "\n",
-    "    Args:\n",
-    "        dataframe (Pandas dataframe): A Pandas dataframe\n",
-    "\n",
-    "    Returns:\n",
-    "        Vectorized matrix: Count vectorized matrix\n",
-    "    \"\"\"\n",
+    "    def __init__(self):\n",
+    "        # self.course_dict = None\n",
+    "        pass\n",
     "    \n",
-    "    countvect = CountVectorizer()\n",
-    "    cvmat = countvect.fit_transform(dataframe[column])\n",
-    "    return cosine_similarity(cvmat)\n",
+    "    def recommendCourse(self, dataframe, title, mat, numrec):\n",
     "\n",
+    "        course_index = pd.Series(\n",
+    "            dataframe.index, index=dataframe['course_title']).drop_duplicates()\n",
     "\n",
-    "def recommendCourse(dataframe, title, cosine_sim_mat, numrec):\n",
+    "        index = course_index[title]\n",
     "\n",
-    "    course_index = pd.Series(\n",
-    "        dataframe.index, index=dataframe['course_title']).drop_duplicates()\n",
+    "        scores = list(enumerate(mat[index]))\n",
     "\n",
-    "    index = course_index[title]\n",
+    "        sorted_scores = sorted(scores, key=lambda x: x[1], reverse=True)\n",
     "\n",
-    "    scores = list(enumerate(cosine_sim_mat[index]))\n",
+    "        selected_course_index = [i[0] for i in sorted_scores[0:]]\n",
     "\n",
-    "    sorted_scores = sorted(scores, key=lambda x: x[1], reverse=True)\n",
+    "        selected_course_score = [i[1] for i in sorted_scores[0:]]\n",
     "\n",
-    "    selected_course_index = [i[0] for i in sorted_scores[1:]]\n",
+    "        rec_df = dataframe.iloc[selected_course_index].join(pd.DataFrame(selected_course_score,\n",
+    " index=selected_course_index, columns=['Similarity_Score']))\n",
     "\n",
-    "    selected_course_score = [i[1] for i in sorted_scores[1:]]\n",
+    "        final_recommended_courses = rec_df[[\n",
+    "            'course_title', 'Similarity_Score', 'url', 'price', 'num_subscribers']].head(numrec)\n",
     "\n",
-    "    rec_df = dataframe.iloc[selected_course_index]\n",
+    "        course_url, course_title, course_price = extractFeatures(final_recommended_courses)\n",
     "\n",
-    "    rec_df['Similarity_Score'] = selected_course_score\n",
+    "        self.course_dict = dict(zip(course_title, course_url))\n",
     "\n",
-    "    final_recommended_courses = rec_df[[\n",
-    "        'course_title', 'Similarity_Score', 'url', 'price', 'num_subscribers']]\n",
-    "\n",
-    "    return final_recommended_courses.head(numrec)\n"
+    "        return self.course_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'transform'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/xoqxoq/Documents/projects/course-recommender-system-app/Course Recommendation System.ipynb Cell 9'\u001b[0m in \u001b[0;36m<cell line: 39>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/xoqxoq/Documents/projects/course-recommender-system-app/Course%20Recommendation%20System.ipynb#ch0000021?line=31'>32</a>\u001b[0m         \u001b[39mprint\u001b[39m(vectorized_matrix)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/xoqxoq/Documents/projects/course-recommender-system-app/Course%20Recommendation%20System.ipynb#ch0000021?line=33'>34</a>\u001b[0m         \u001b[39m# return vectorized_matrix\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/xoqxoq/Documents/projects/course-recommender-system-app/Course%20Recommendation%20System.ipynb#ch0000021?line=34'>35</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell:/home/xoqxoq/Documents/projects/course-recommender-system-app/Course%20Recommendation%20System.ipynb#ch0000021?line=35'>36</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell:/home/xoqxoq/Documents/projects/course-recommender-system-app/Course%20Recommendation%20System.ipynb#ch0000021?line=36'>37</a>\u001b[0m \u001b[39m# ModelCountVectorizer('Clean_title').fit_transform(dataframe=df,vectorization_method=CountVectorizer)\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/xoqxoq/Documents/projects/course-recommender-system-app/Course%20Recommendation%20System.ipynb#ch0000021?line=38'>39</a>\u001b[0m ModelCountVectorizer(\u001b[39m'\u001b[39;49m\u001b[39mClean_title\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39;49mfit(dataframe\u001b[39m=\u001b[39;49mdf,vectorization_method\u001b[39m=\u001b[39;49mCountVectorizer)\u001b[39m.\u001b[39;49mtransform(df)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'transform'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'Ultimate Investment Banking Course': 'https://www.udemy.com/ultimate-investment-banking-course/',\n",
+       " 'The Complete Investment Banking Course 2017': 'https://www.udemy.com/the-complete-investment-banking-course-2016/',\n",
+       " 'The Ultimate jQuery Course': 'https://www.udemy.com/essential-jquery-training/',\n",
+       " 'Advanced Accounting for Investment Banking': 'https://www.udemy.com/advanced-accounting-for-investment-banking/',\n",
+       " 'The Investment Banking Recruitment Series': 'https://www.udemy.com/investmentbanking/',\n",
+       " 'The Ultimate Web Development Course': 'https://www.udemy.com/build-an-instant-update-database-interface-with-jquery-ajax/'}"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "titlename = \"Ultimate Investment Banking Course\"\n",
+    "\n",
+    "cv_mat = ModelCountVectorizer('Clean_title').fit_transform(dataframe=df)\n",
+    "\n",
+    "cosine_mat = ModelCosineSimilarity().transform(cv_mat)\n",
+    "\n",
+    "recdf = recommendCourse().recommendCourse(df, titlename, cosine_mat, 6)\n",
+    "\n",
+    "recdf\n",
+    "\n",
+    "\n",
+    "# course_url, course_title, course_price = extractFeatures(recdf)\n",
+    "\n",
+    "# dictmap = dict(zip(course_title, course_url))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Ultimate Investment Banking Course': 'https://www.udemy.com/ultimate-investment-banking-course/',\n",
+       " 'The Complete Investment Banking Course 2017': 'https://www.udemy.com/the-complete-investment-banking-course-2016/',\n",
+       " 'The Ultimate jQuery Course': 'https://www.udemy.com/essential-jquery-training/',\n",
+       " 'Advanced Accounting for Investment Banking': 'https://www.udemy.com/advanced-accounting-for-investment-banking/',\n",
+       " 'The Investment Banking Recruitment Series': 'https://www.udemy.com/investmentbanking/',\n",
+       " 'The Ultimate Web Development Course': 'https://www.udemy.com/build-an-instant-update-database-interface-with-jquery-ajax/'}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dictmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df = readData('UdemyCleanedTitle.csv')\n",
     "df = titleManipulation(df, 'course_title', 'Clean_title')\n",
@@ -505,37 +329,77 @@
     "        pass\n",
     "\n",
     "    \n",
-    "    def fit(self, vectorization_method, dataframe):\n",
+    "    def fit(self, dataframe):\n",
     "        \n",
-    "        vectorizer = vectorization_method()\n",
-    "\n",
-    "        vectorizer.fit(dataframe[self.column])\n",
-    "        self.vectorizer_fit = vectorizer\n",
+    "        self.vectorizer_fit = CountVectorizer().fit(dataframe[self.column])\n",
+    "        return self\n",
     "\n",
     "    def transform(self, dataframe):\n",
     "\n",
-    "        return self.vectorizer_fit.transform(dataframe[self.column])\n",
-    "    \n",
-    "    def fit_transform(self, dataframe, vectorization_method):\n",
+    "        vectorized_matrix = self.vectorizer_fit.transform(dataframe[self.column])\n",
+    "        return vectorized_matrix\n",
     "\n",
-    "        vectorizer = vectorization_method()\n",
+    "    def fit_transform(self, dataframe):\n",
     "\n",
-    "        vectorized_matrix = vectorizer.fit_transform(dataframe[self.column])\n",
+    "        self.fit(dataframe)\n",
     "\n",
-    "        print(vectorized_matrix)\n",
+    "        vectorized_matrix = self.transform(dataframe)\n",
     "\n",
-    "        # return vectorized_matrix\n",
+    "        return vectorized_matrix\n",
     "\n",
     "\n",
-    "# ModelCountVectorizer('Clean_title').fit_transform(dataframe=df,vectorization_method=CountVectorizer)\n",
+    "# print(ModelCountVectorizer('Clean_title').fit(dataframe=df).transform(dataframe=df))\n",
     "\n",
-    "ModelCountVectorizer('Clean_title').fit(dataframe=df,vectorization_method=CountVectorizer).transform(df)\n",
+    "cv_mat = ModelCountVectorizer('Clean_title').fit_transform(dataframe=df)\n",
+    "# print(cv_mat)\n",
     "\n",
+    "\n",
+    "\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "class ModelCosineSimilarity():\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def transform(self, matrix):\n",
+    "\n",
+    "        similarity_matrix = cosine_similarity(matrix)\n",
+    "        return similarity_matrix\n",
+    "\n",
+    "# ModelCosineSimilarity().transform(cv_mat)\n",
     "\n",
     "# cv_mat = cosineSimMat(df, 'Clean_title')\n",
     "\n",
     "# cv_mat\n",
     "# recommendCourse(df, '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test1, test2 = None, None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "top\n"
+     ]
+    }
+   ],
+   "source": [
+    "if test1 is None and test2 is None:\n",
+    "    print('top')"
    ]
   },
   {
