Changes and adaptations

--- a/course-recommender-system-app/Course Recommendation System.ipynb
+++ b/course-recommender-system-app/Course Recommendation System.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,11 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def readData(file: str, extension='.csv'):\n",
+    "from yaml import safe_load\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def readData(files: str, extension='.csv', path='datasets'):\n",
     "    \"\"\"_summary_\n",
     "\n",
     "    Args:\n",
@@ -58,14 +61,29 @@
     "        A Pandas dataframe\n",
     "    \"\"\"\n",
     "    if extension=='.csv':\n",
-    "        read_func = pd.read_csv\n",
+    "        courses_dataset = pd.read_csv(\"%s/%s\" %(path, files))\n",
+    "    elif extension=='.yaml':\n",
+    "        dpath = Path(path)\n",
     "\n",
-    "    return read_func(file)"
+    "        courses_file = dpath / files\n",
+    "        with courses_file.open() as f:\n",
+    "            courses_dataset = pd.json_normalize(safe_load(f))\n",
+    "\n",
+    "    return courses_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = readData(files='udemy_course_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -131,66 +149,60 @@
        "      <td>1</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1113822</td>\n",
-       "      <td>Complete GST Course &amp; Certification - Grow You...</td>\n",
-       "      <td>https://www.udemy.com/goods-and-services-tax/</td>\n",
-       "      <td>True</td>\n",
-       "      <td>75</td>\n",
-       "      <td>2792</td>\n",
-       "      <td>923</td>\n",
-       "      <td>274</td>\n",
-       "      <td>All Levels</td>\n",
-       "      <td>39 hours</td>\n",
-       "      <td>2017-03-09T16:34:20Z</td>\n",
-       "      <td>Business Finance</td>\n",
-       "      <td>209400</td>\n",
-       "      <td>2017-03-09</td>\n",
-       "      <td>16:34:20Z</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   course_id                                       course_title  \\\n",
-       "0    1070968                 Ultimate Investment Banking Course   \n",
-       "1    1113822  Complete GST Course & Certification - Grow You...   \n",
+       "   course_id                        course_title  \\\n",
+       "0    1070968  Ultimate Investment Banking Course   \n",
        "\n",
        "                                                 url  is_paid  price  \\\n",
        "0  https://www.udemy.com/ultimate-investment-bank...     True    200   \n",
-       "1      https://www.udemy.com/goods-and-services-tax/     True     75   \n",
        "\n",
        "   num_subscribers  num_reviews  num_lectures       level content_duration  \\\n",
        "0             2147           23            51  All Levels        1.5 hours   \n",
-       "1             2792          923           274  All Levels         39 hours   \n",
        "\n",
        "    published_timestamp           subject  profit published_date  \\\n",
        "0  2017-01-18T20:58:58Z  Business Finance  429400     2017-01-18   \n",
-       "1  2017-03-09T16:34:20Z  Business Finance  209400     2017-03-09   \n",
        "\n",
        "  published_time  year  month  day  \n",
-       "0      20:58:58Z  2017      1   18  \n",
-       "1      16:34:20Z  2017      3    9  "
+       "0      20:58:58Z  2017      1   18  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = readData('udemy_course_data.csv')\n",
-    "df.head(2)"
+    "df1.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,95 +255,19 @@
     "\n",
     "        self.course_dict = dict(zip(course_title, course_url))\n",
     "\n",
-    "        return self.course_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Ultimate Investment Banking Course': 'https://www.udemy.com/ultimate-investment-banking-course/',\n",
-       " 'The Complete Investment Banking Course 2017': 'https://www.udemy.com/the-complete-investment-banking-course-2016/',\n",
-       " 'The Ultimate jQuery Course': 'https://www.udemy.com/essential-jquery-training/',\n",
-       " 'Advanced Accounting for Investment Banking': 'https://www.udemy.com/advanced-accounting-for-investment-banking/',\n",
-       " 'The Investment Banking Recruitment Series': 'https://www.udemy.com/investmentbanking/',\n",
-       " 'The Ultimate Web Development Course': 'https://www.udemy.com/build-an-instant-update-database-interface-with-jquery-ajax/'}"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "titlename = \"Ultimate Investment Banking Course\"\n",
+    "        return self.course_dict\n",
     "\n",
-    "cv_mat = ModelCountVectorizer('Clean_title').fit_transform(dataframe=df)\n",
+    "        from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
-    "cosine_mat = ModelCosineSimilarity().transform(cv_mat)\n",
-    "\n",
-    "recdf = recommendCourse().recommendCourse(df, titlename, cosine_mat, 6)\n",
-    "\n",
-    "recdf\n",
-    "\n",
-    "\n",
-    "# course_url, course_title, course_price = extractFeatures(recdf)\n",
-    "\n",
-    "# dictmap = dict(zip(course_title, course_url))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Ultimate Investment Banking Course': 'https://www.udemy.com/ultimate-investment-banking-course/',\n",
-       " 'The Complete Investment Banking Course 2017': 'https://www.udemy.com/the-complete-investment-banking-course-2016/',\n",
-       " 'The Ultimate jQuery Course': 'https://www.udemy.com/essential-jquery-training/',\n",
-       " 'Advanced Accounting for Investment Banking': 'https://www.udemy.com/advanced-accounting-for-investment-banking/',\n",
-       " 'The Investment Banking Recruitment Series': 'https://www.udemy.com/investmentbanking/',\n",
-       " 'The Ultimate Web Development Course': 'https://www.udemy.com/build-an-instant-update-database-interface-with-jquery-ajax/'}"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dictmap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = readData('UdemyCleanedTitle.csv')\n",
-    "df = titleManipulation(df, 'course_title', 'Clean_title')\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
     "class ModelCountVectorizer():\n",
     "\n",
     "    def __init__(self, column):\n",
     "        self.column = column\n",
-    "        pass\n",
-    "\n",
+    "        self.vectorizer = CountVectorizer()\n",
     "    \n",
     "    def fit(self, dataframe):\n",
     "        \n",
-    "        self.vectorizer_fit = CountVectorizer().fit(dataframe[self.column])\n",
+    "        self.vectorizer_fit = vectorizer.fit(dataframe[self.column])\n",
     "        return self\n",
     "\n",
     "    def transform(self, dataframe):\n",
@@ -347,13 +283,24 @@
     "\n",
     "        return vectorized_matrix\n",
     "\n",
+    "        \n",
+    "def titleManipulation(dataframe, column:str, new_column:str):\n",
+    "    \"\"\"_summary_\n",
     "\n",
-    "# print(ModelCountVectorizer('Clean_title').fit(dataframe=df).transform(dataframe=df))\n",
+    "    Args:\n",
+    "        dataframe (Pandas): Pandas dataframe\n",
+    "        column (str): Column to be modified\n",
     "\n",
-    "cv_mat = ModelCountVectorizer('Clean_title').fit_transform(dataframe=df)\n",
-    "# print(cv_mat)\n",
+    "    Returns:\n",
+    "        Dataframe: Column modified dataframe\n",
+    "    \"\"\"\n",
+    "    dataframe[new_column] = dataframe[column].apply(nfx.remove_stopwords)\\\n",
+    "    .apply(nfx.remove_special_characters)\\\n",
+    "    .apply(nfx.remove_puncts)\\\n",
+    "    .apply(nfx.remove_emojis)\\\n",
+    "    .apply(str.lower)\n",
     "\n",
-    "\n",
+    "    return dataframe\n",
     "\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
@@ -365,69 +312,160 @@
     "    def transform(self, matrix):\n",
     "\n",
     "        similarity_matrix = cosine_similarity(matrix)\n",
-    "        return similarity_matrix\n",
-    "\n",
-    "# ModelCosineSimilarity().transform(cv_mat)\n",
-    "\n",
-    "# cv_mat = cosineSimMat(df, 'Clean_title')\n",
-    "\n",
-    "# cv_mat\n",
-    "# recommendCourse(df, '')"
+    "        return similarity_matrix\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test1, test2 = None, None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "top\n"
+      "  (0, 3)\t1\n",
+      "  (0, 2)\t1\n",
+      "  (0, 0)\t1\n",
+      "  (0, 1)\t1\n"
      ]
     }
    ],
    "source": [
-    "if test1 is None and test2 is None:\n",
-    "    print('top')"
+    "vectorizer = CountVectorizer()\n",
+    "matrix = vectorizer.fit_transform([df['Clean_title'][0]])\n",
+    "print(matrix)\n",
+    "\n",
+    "# pd.DataFrame(matrix.toarray(),\n",
+    "#                       columns=vectorizer.get_feature_names())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.20412415, 0.        , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.20412415, 1.        , 0.        , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 1.        , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       ...,\n",
+       "       [0.        , 0.        , 0.        , ..., 1.        , 0.        ,\n",
+       "        0.23570226],\n",
+       "       [0.        , 0.        , 0.        , ..., 0.        , 1.        ,\n",
+       "        0.        ],\n",
+       "       [0.        , 0.        , 0.        , ..., 0.23570226, 0.        ,\n",
+       "        1.        ]])"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = readData('UdemyCleanedTitle.csv')\n",
+    "df = titleManipulation(df, 'course_title', 'Clean_title')\n",
+    "\n",
+    "titlename = \"Ultimate Investment Banking Course\"\n",
+    "\n",
+    "instance = ModelCountVectorizer('Clean_title')\n",
+    "\n",
+    "cv_mat = instance.fit_transform(dataframe=df)\n",
+    "\n",
+    "# pd.DataFrame(cv_mat.toarray(),\n",
+    "                    #   columns=instance.vectorizer_fit.get_feature_names())\n",
+    "\n",
+    "# print(cv_mat)\n",
+    "\n",
+    "cosine_mat = ModelCosineSimilarity().transform(cv_mat)\n",
+    "\n",
+    "\n",
+    "cosine_mat\n",
+    "\n",
+    "# recdf = recommendCourse().recommendCourse(df, titlename, cosine_mat, 6)\n",
+    "\n",
+    "# recdf\n",
+    "\n",
+    "\n",
+    "# course_url, course_title, course_price = extractFeatures(recdf)\n",
+    "\n",
+    "# dictmap = dict(zip(course_title, course_url))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2832                 Learn HTML5 Programming From Scratch\n",
+       "3037                       Coding for Entrepreneurs Basic\n",
+       "3235                           The Web Developer Bootcamp\n",
+       "2788    Build Your First Website in 1 Week with HTML5 ...\n",
+       "3237                The Complete Web Developer Course 2.0\n",
+       "1900                Free Beginner Electric Guitar Lessons\n",
+       "Name: course_title, dtype: object"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dff.course_title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "def extractFeatures(rec_dataframe):\n",
-    "    \"\"\"_summary_\n",
-    "\n",
-    "    Args:\n",
-    "        rec_dataframe (Pandas dataframe): A Pandas dataframe\n",
-    "\n",
-    "    Returns:\n",
-    "        url, title and prie: Returns informations\n",
-    "    \"\"\"\n",
-    "\n",
-    "    course_url = list(rec_dataframe['url'])\n",
-    "    course_title = list(rec_dataframe['course_title'])\n",
-    "    course_price = list(rec_dataframe['price'])\n",
-    "\n",
-    "    return course_url, course_title, course_price\n",
-    "\n"
+    "dff = df.sort_values('num_subscribers', ascending=False).head(6).loc[:,['course_title', 'url']].astype(str)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(dff.url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
