--- a/course-recommender-system-app/Course Recommendation System.ipynb
+++ b/course-recommender-system-app/Course Recommendation System.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,126 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>course_id</th>\n",
-       "      <th>course_title</th>\n",
-       "      <th>url</th>\n",
-       "      <th>is_paid</th>\n",
-       "      <th>price</th>\n",
-       "      <th>num_subscribers</th>\n",
-       "      <th>num_reviews</th>\n",
-       "      <th>num_lectures</th>\n",
-       "      <th>level</th>\n",
-       "      <th>content_duration</th>\n",
-       "      <th>published_timestamp</th>\n",
-       "      <th>subject</th>\n",
-       "      <th>profit</th>\n",
-       "      <th>published_date</th>\n",
-       "      <th>published_time</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>day</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1070968</td>\n",
-       "      <td>Ultimate Investment Banking Course</td>\n",
-       "      <td>https://www.udemy.com/ultimate-investment-bank...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>200</td>\n",
-       "      <td>2147</td>\n",
-       "      <td>23</td>\n",
-       "      <td>51</td>\n",
-       "      <td>All Levels</td>\n",
-       "      <td>1.5 hours</td>\n",
-       "      <td>2017-01-18T20:58:58Z</td>\n",
-       "      <td>Business Finance</td>\n",
-       "      <td>429400</td>\n",
-       "      <td>2017-01-18</td>\n",
-       "      <td>20:58:58Z</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   course_id                        course_title  \\\n",
-       "0    1070968  Ultimate Investment Banking Course   \n",
-       "\n",
-       "                                                 url  is_paid  price  \\\n",
-       "0  https://www.udemy.com/ultimate-investment-bank...     True    200   \n",
-       "\n",
-       "   num_subscribers  num_reviews  num_lectures       level content_duration  \\\n",
-       "0             2147           23            51  All Levels        1.5 hours   \n",
-       "\n",
-       "    published_timestamp           subject  profit published_date  \\\n",
-       "0  2017-01-18T20:58:58Z  Business Finance  429400     2017-01-18   \n",
-       "\n",
-       "  published_time  year  month  day  \n",
-       "0      20:58:58Z  2017      1   18  "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df1.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +148,7 @@
     "    \n",
     "    def fit(self, dataframe):\n",
     "        \n",
-    "        self.vectorizer_fit = vectorizer.fit(dataframe[self.column])\n",
+    "        self.vectorizer_fit = self.vectorizer.fit(dataframe[self.column])\n",
     "        return self\n",
     "\n",
     "    def transform(self, dataframe):\n",
@@ -311,59 +192,70 @@
     "\n",
     "    def transform(self, matrix):\n",
     "\n",
-    "        similarity_matrix = cosine_similarity(matrix)\n",
-    "        return similarity_matrix\n"
+    "        transformed_dataframe = cosine_similarity(matrix)\n",
+    "        return transformed_dataframe\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  (0, 3)\t1\n",
-      "  (0, 2)\t1\n",
-      "  (0, 0)\t1\n",
-      "  (0, 1)\t1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "vectorizer = CountVectorizer()\n",
-    "matrix = vectorizer.fit_transform([df['Clean_title'][0]])\n",
-    "print(matrix)\n",
+    "import pandas as pd\n",
+    "from model.utils.utils import extractFeatures\n",
     "\n",
-    "# pd.DataFrame(matrix.toarray(),\n",
-    "#                       columns=vectorizer.get_feature_names())"
+    "class recommendCourse():\n",
+    "\n",
+    "    def __init__(self, title, numrec):\n",
+    "        self.title = title\n",
+    "        self.numrec = numrec\n",
+    "    \n",
+    "    def transform(self, dataframe, similarity_matrix):\n",
+    "\n",
+    "        course_index = pd.Series(\n",
+    "            dataframe.index, index=dataframe['course_title']).drop_duplicates()\n",
+    "\n",
+    "        index = course_index[self.title]\n",
+    "\n",
+    "        scores = list(enumerate(similarity_matrix[index]))\n",
+    "\n",
+    "        sorted_scores = sorted(scores, key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "        selected_course_index = [i[0] for i in sorted_scores[0:]]\n",
+    "\n",
+    "        selected_course_score = [i[1] for i in sorted_scores[0:]]\n",
+    "\n",
+    "        rec_df = dataframe.iloc[selected_course_index].join(pd.DataFrame(selected_course_score,\n",
+    "             index=selected_course_index, columns=['Similarity_Score']))\n",
+    "\n",
+    "        final_recommended_courses = rec_df[[\n",
+    "            'course_title', 'Similarity_Score', 'url', 'price', 'num_subscribers']].head(self.numrec)\n",
+    "\n",
+    "        course_url, course_title, course_price = extractFeatures(final_recommended_courses)\n",
+    "\n",
+    "        transformed_dataframe = dict(zip(course_title, course_url))\n",
+    "\n",
+    "        return transformed_dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.        , 0.20412415, 0.        , ..., 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.20412415, 1.        , 0.        , ..., 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.        , 1.        , ..., 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       ...,\n",
-       "       [0.        , 0.        , 0.        , ..., 1.        , 0.        ,\n",
-       "        0.23570226],\n",
-       "       [0.        , 0.        , 0.        , ..., 0.        , 1.        ,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.        , 0.        , ..., 0.23570226, 0.        ,\n",
-       "        1.        ]])"
+       "{'Ultimate Investment Banking Course': 'https://www.udemy.com/ultimate-investment-banking-course/',\n",
+       " 'The Complete Investment Banking Course 2017': 'https://www.udemy.com/the-complete-investment-banking-course-2016/',\n",
+       " 'The Ultimate jQuery Course': 'https://www.udemy.com/essential-jquery-training/',\n",
+       " 'Advanced Accounting for Investment Banking': 'https://www.udemy.com/advanced-accounting-for-investment-banking/',\n",
+       " 'The Investment Banking Recruitment Series': 'https://www.udemy.com/investmentbanking/',\n",
+       " 'The Ultimate Web Development Course': 'https://www.udemy.com/build-an-instant-update-database-interface-with-jquery-ajax/'}"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,31 +263,149 @@
    "source": [
     "df = readData('UdemyCleanedTitle.csv')\n",
     "df = titleManipulation(df, 'course_title', 'Clean_title')\n",
-    "\n",
     "titlename = \"Ultimate Investment Banking Course\"\n",
-    "\n",
     "instance = ModelCountVectorizer('Clean_title')\n",
-    "\n",
     "cv_mat = instance.fit_transform(dataframe=df)\n",
-    "\n",
-    "# pd.DataFrame(cv_mat.toarray(),\n",
-    "                    #   columns=instance.vectorizer_fit.get_feature_names())\n",
-    "\n",
-    "# print(cv_mat)\n",
-    "\n",
     "cosine_mat = ModelCosineSimilarity().transform(cv_mat)\n",
     "\n",
     "\n",
-    "cosine_mat\n",
     "\n",
-    "# recdf = recommendCourse().recommendCourse(df, titlename, cosine_mat, 6)\n",
+    "recdf = recommendCourse(titlename, 6).transform(df, cosine_mat)\n",
     "\n",
-    "# recdf\n",
+    "recdf\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Web Programming with Python': 'https://www.udemy.com/web-programming-with-python/',\n",
+       " 'Coding for Entrepreneurs: Learn Python, Django, and More.': 'https://www.udemy.com/coding-for-entrepreneurs/',\n",
+       " 'Learn Python and Django: Payment Processing': 'https://www.udemy.com/learn-django-code-accept-payments-with-stripe/',\n",
+       " 'Python and Django Full Stack Web Developer Bootcamp': 'https://www.udemy.com/python-and-django-full-stack-web-developer-bootcamp/',\n",
+       " 'Fun and creative web engineering with Python and Web2py': 'https://www.udemy.com/web-engineering-with-python-and-web2py/',\n",
+       " 'The Complete Ethical Hacking Course 2.0: Python & Kali Linux': 'https://www.udemy.com/penetration-testing-ethical-hacking-course-python-kali-linux/'}"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def searchTerm(term:str, dataframe, amount:int, course:str):\n",
+    "    \"\"\"_summary_\n",
+    "\n",
+    "    Args:\n",
+    "        term (str): Term to be searhhed\n",
+    "        dataframe (_type_): Pandas dataframe\n",
+    "        amount (int): Amount of terms to return\n",
+    "\n",
+    "    Returns:\n",
+    "        Dataframe: Sorted amount of terms\n",
+    "    \"\"\"\n",
+    "    result_dataframe = dataframe[dataframe[course].str.contains(term)]\n",
+    "    sorted_amount = result_dataframe.sort_values(by='num_subscribers', ascending=False).head(amount)\n",
+    "    return sorted_amount\n",
+    "\n",
+    "titlename = 'python'\n",
+    "\n",
+    "# modificar essa parte\n",
+    "resultdf = searchTerm(titlename, df, 6, 'Clean_title')\n",
+    "\n",
+    "if resultdf.shape[0] >= 6:\n",
+    "    resultdf = resultdf.head(6)\n",
+    "    course_url, course_title, course_price = extractFeatures(\n",
+    "        resultdf)\n",
+    "    dictmap = dict(zip(course_title, course_url))\n",
+    "\n",
+    "dictmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# def searchTerm(term:str, dataframe, amount:int, course:str):\n",
+    "#     \"\"\"_summary_\n",
+    "\n",
+    "#     Args:\n",
+    "#         term (str): Term to be searhhed\n",
+    "#         dataframe (_type_): Pandas dataframe\n",
+    "#         amount (int): Amount of terms to return\n",
+    "\n",
+    "#     Returns:\n",
+    "#         Dataframe: Sorted amount of terms\n",
+    "#     \"\"\"\n",
+    "#     result_dataframe = dataframe[dataframe[course].str.contains(term)]\n",
+    "#     sorted_amount = result_dataframe.sort_values(by='num_subscribers', ascending=False).head(amount)\n",
+    "#     return sorted_amount\n",
+    "\n",
+    "# # modificar essa parte\n",
+    "# resultdf = searchTerm(titlename, df, 6, 'Clean_title')\n",
+    "\n",
+    "# if resultdf.shape[0] >= 6:\n",
+    "#     resultdf = resultdf.head(6)\n",
+    "#     course_url, course_title, course_price = extractFeatures(\n",
+    "#         resultdf)\n",
+    "#     dictmap = dict(zip(course_title, course_url))\n",
     "\n",
     "\n",
-    "# course_url, course_title, course_price = extractFeatures(recdf)\n",
+    "from model.utils.utils import extractFeatures\n",
+    "from model.data_preparation.data_preparation import searchTerm\n",
     "\n",
-    "# dictmap = dict(zip(course_title, course_url))\n"
+    "class SimpleSearchEngine():\n",
+    "\n",
+    "    def __init__(self, search_term, amount, course):\n",
+    "        self.search_term = search_term\n",
+    "        self.amount = amount\n",
+    "        self.course = course\n",
+    "\n",
+    "    def fit(self, dataframe):\n",
+    "        self.search_dataframe = searchTerm(self.search_term, dataframe, self.amount, self.course)\n",
+    "\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self):\n",
+    "        if self.search_dataframe.shape[0] >= self.amount:\n",
+    "            course_url, course_title, course_price = extractFeatures(\n",
+    "                self.search_dataframe.head(self.amount))\n",
+    "            transformed_dataframe = dict(zip(course_title, course_url))\n",
+    "            \n",
+    "        else:\n",
+    "            course_url, course_title, course_price = extractFeatures(\n",
+    "                self.search_dataframe.head(self.amount))\n",
+    "            transformed_dataframe = dict(zip(course_title, course_url))\n",
+    "\n",
+    "        return transformed_dataframe\n",
+    "\n",
+    "    def fit_transform(self, dataframe):\n",
+    "        self.fit(dataframe)\n",
+    "        transformed_dataframe = self.transform()\n",
+    "\n",
+    "        return transformed_dataframe\n",
+    "\n",
+    "titlename='pthon'\n",
+    "\n",
+    "\n",
+    "SimpleSearchEngine(titlename, 6, 'Clean_title').fit(df).transform()"
    ]
   },
   {
